# SavingsAPI

./: .gitignore  compose.yml  pyproject.toml
.github/workflows/: deploy.yml
app/: __init__.py  config.py
app/API/: ASB.py  kernel_wealth.py  sharesies.py  simplicity.py
app/router/: BNZ.py  investnow.py  sharesies.py
app/utils/: handle_missing.py  logger.py
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py
backend/app/API/: BNZ.py  investnow.py  sharesies.py
backend/app/router/: ASB.py  BNZ.py  investnow.py  kernel_wealth.py  sharesies.py  simplicity.py  utility.py
backend/app/utils/: db.py  handle_missing.py
database/: initdb.sql
frontend/: .dockerignore  Dockerfile  package.json
frontend/src/components/: Dashboard.jsx
pgadmin/: servers.json
