[project]
name = "savingsapi"
version = "0.1.0"
description = "API to interact with all of my savings locations"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.0",
    "fastapi[standard]>=0.118.0",
    "pandas>=2.3.3",
    "polars>=1.35.1",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.11.0",
    "pytz>=2025.2",
    "requests>=2.32.5",
]
